# WebnovelScraper

./: .gitignore  ReplacementDict.txt  pyproject.toml
Advent of the Archmage/: Advent of the Archmage.docx  ArchmageDict.txt  NonStandardWords.txt  RemoveWords.txt
GUI/: myStorage.py
GUI/BackgroundProcesses/: StyleDoc.docx  file_make.py
I Alone Level Up/: I Alone Level Up.docx
Tests/: TestWord.docx  demo.docx  re_tests.py
Tests/TestEPUB/: content.opf  index_split_000.html  index_split_001.html  index_split_002.html  index_split_003.html  stylesheet.css  toc.ncx
src/webnovels/: editing.py  logging_config.py  main.py  outputs.py  scraping.py  utils.py
src/webnovels/.resources/: CensoredWords.txt
src/webnovels/GUI/: EditorGUI.py
src/webnovels/GUI/BackgroundProcesses/: EstablishNewNovel.py  mySpellCheck.py  testfile.txt  webnovel_cleaner.py  webnovel_scraper.py
src/webnovels/GUI/Practice/: gui practive.py
src/webnovels/gui/: backend.py  editor_panel.py  gui.py  gui_components.py  scraper_panel.py
src/webnovels/gui/scrapers/: 00_baseclass.py
src/webnovels/scrapers/: base_scraper.py  lightnovelworld_co.py
